<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.appdesk.sharemarketalertapp.ui.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/alertFragment"
        android:name="com.appdesk.sharemarketalertapp.ui.fragment.AlertFragment"
        android:label="@string/alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/watchlistFragment"
        android:name="com.appdesk.sharemarketalertapp.ui.fragment.WatchlistFragment"
        android:label="@string/watchlist"
        tools:layout="@layout/fragment_watchlist" />
</navigation>