<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noInternetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_no_connection_bro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:fontFamily="@font/firasans_regular"
        android:text="@string/no_internet_connection"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:fontFamily="@font/firasans_light"
        android:text="@string/noInternetMsg"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/internetRetryTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/firasans_semi_bold"
        android:text="@string/retry"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="@dimen/_14sp" />

</androidx.constraintlayout.widget.ConstraintLayout>